--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "plaiceholder": "^2.0.1",
     "prettier": "^2.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
