--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "he": "^1.2.0",
-    "next": "^11.0.1",
+    "next": "10.2.0",
     "next-mdx-remote": "^2.1.4",
-    "plaiceholder": "^2.0.1",
     "prettier": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -29,6 +28,6 @@
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.13",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.1.2"
   }
 }
